fix: improve icon visibility in light and dark themes

--- a/src/styles/Extn-NavigationAndHistory.less
+++ b/src/styles/Extn-NavigationAndHistory.less
@@ -243,20 +243,24 @@
 }
 
 .remove-file {
+  color: #adb9bd;
   position: absolute;
   right: 8px;
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
   opacity: 0.6;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 500;
   display: none;
 }
 
 #mrof-list li:hover .remove-file {
+  color: #fff;
   display: block;
 }
 
 .remove-file:hover {
+  color: #fff;
   opacity: 1;
 }
